--- a/CodeTestingUnitTest/CodeTestingUnitTest.csproj
+++ b/CodeTestingUnitTest/CodeTestingUnitTest.csproj
@@ -73,7 +73,6 @@
     <Compile Include="ControllerTests\HomecontrollerUnitTests.cs" />
     <Compile Include="ControllerTests\HttpContextBase.cs" />
     <Compile Include="ControllerTests\HttpServerUtilityBase.cs" />
-    <Compile Include="HelperTests\ModelBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -86,7 +85,9 @@
       <Name>CodingTest</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="HelperTests\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
